py/output/crawler14.log
TEST Sat Dec 13 10:12:53 AM KST 2025
/home/kali/deepguard/darkweb_crawler/crawler14.py:495: XMLParsedAsHTMLWarning: It looks like you're using an HTML parser to parse an XML document.

Assuming this really is an XML document, what you're doing might work, but you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the Python package 'lxml' installed, and pass the keyword argument `features="xml"` into the BeautifulSoup constructor.

If you want or need to use an HTML parser on this document, you can make this warning go away by filtering it. To do that, run this code before calling the BeautifulSoup constructor:

    from bs4 import XMLParsedAsHTMLWarning
    import warnings

    warnings.filterwarnings("ignore", category=XMLParsedAsHTMLWarning)

  soup = BeautifulSoup(html, "html.parser")
  File "/home/kali/deepguard/darkweb_crawler/crawler14.py", line 754
    else:
         ^
IndentationError: unindent does not match any outer indentation level
  File "/home/kali/deepguard/darkweb_crawler/crawler14.py", line 715
    row = {
    ^^^
IndentationError: expected an indented block after 'if' statement on line 714
  File "/home/kali/deepguard/darkweb_crawler/crawler14.py", line 713
    else:    verdict.score >= 10 and len(ind.get("emails", [])) >= 1 and should_save(verdict):   
                                                                                             ^
SyntaxError: invalid syntax
  File "/home/kali/deepguard/darkweb_crawler/crawler14.py", line 713
    else  verdict.score >= 10 and len(ind.get("emails", [])) >= 1 and should_save(verdict):   
          ^^^^^^^
SyntaxError: expected ':'
  File "/home/kali/deepguard/darkweb_crawler/crawler14.py", line 753
    else:
         ^
IndentationError: unindent does not match any outer indentation level
  File "/home/kali/deepguard/darkweb_crawler/crawler14.py", line 713
    elif verdict.score >= 10 and emails_total >= 1 and should_save(verdict):    
    ^^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/kali/deepguard/darkweb_crawler/crawler14.py", line 151, in <module>
    for m in RE_EMAIL_OBFUSCATED.finditer(s):
             ^^^^^^^^^^^^^^^^^^^
NameError: name 'RE_EMAIL_OBFUSCATED' is not defined
